--- a/cookie.conf
+++ b/cookie.conf
@@ -273,6 +273,8 @@ https?:\/\/ios\.baertt\.com\/v5\/article\/complete url script-request-body https
 https:\/\/ios\.baertt\.com\/v5\/article\/red_packet url script-request-body https://raw.githubusercontent.com/Sunert/Scripts/master/Task/youth.js
 
 https:\/\/ios\.baertt\.com\/v5\/user\/app_stay\.json url script-request-body https://raw.githubusercontent.com/Sunert/Scripts/master/Task/youth.js
+
+https:\/\/ios\.baertt\.com\/v5\/\w+\/withdraw\.json url script-request-body https://raw.githubusercontent.com/Sunert/Scripts/master/Task/youth.js
 #中青body获取
 #https://ios.baertt.com/v5/article/complete.json url script-request-body https://raw.githubusercontent.com/xingliuchao/jd/main/Youth-getbody.js
 
